# oec-middleware

./: .gitignore  CMakeLists.txt  README.md  setenv.sh
CppSniper4HOEC/: CMakeLists.txt
CppSniper4HOEC/CppSniper/: CppSniper4HOEC.h
CppSniper4HOEC/cmt/: requirements
CppSniper4HOEC/src/: CppSniper4HOEC.cc  FragmentRingArray.cc  FragmentRingArray.h  HOECEvtMemMgr.cc  HOECEvtMemMgr.h  HOECInputSvc.cc  HOECInputSvc.h  HOECNavBuf.cc  HOECNavBuf.h  HOECOutputSvc.cc  HOECOutputSvc.h  HOECProcessor.cc  HOECProcessor.h  SortListCache.cc  SortListCache.h
CppSniper4LOEC/: CMakeLists.txt
CppSniper4LOEC/CppSniper/: CppSniper4LOEC.h
CppSniper4LOEC/cmt/: requirements
CppSniper4LOEC/src/: CppSniper4LOEC.cc  LOECEvtMemMgr.cc  LOECEvtMemMgr.h  LOECInputSvc.cc  LOECInputSvc.h  LOECNavBuf.cc  LOECNavBuf.h  LOECOutputSvc.cc  LOECOutputSvc.h  LOECPreparationAlg.cc  LOECProcessor.cc  LOECProcessor.h
DumpTreeAlg/cmt/: requirements
DumpTreeAlg/python/DumpTreeAlg/: __init__.py
DumpTreeAlg/share/: read.cpp  run.py
DumpTreeAlg/src/: DumpTreeAlg.cc  DumpTreeAlg.h
MiddlewareConfigSvc/: CMakeLists.txt
MiddlewareConfigSvc/MiddlewareConfigSvc/: MiddlewareConfigSvc.h
MiddlewareConfigSvc/src/: MiddlewareConfigSvc.cc
OECAdaptor/cmt/: .requirements.swp  .setup.sh.swo  .setup.sh.swp  requirements
OECTestAlg/: CMakeLists.txt
OECTestAlg/cmt/: requirements
OECTestAlg/python/OECTestAlg/: __init__.py
OECTestAlg/share/: OecEvtConverterTest.json
OECTestAlg/src/: OECTestAlg.cc  OECTestAlg.h  OecEvtConverterTest.cc
OecEvtConverter/: CMakeLists.txt
OecEvtConverter/OecEvtConverter/: OecEvtConverter.h
OecEvtConverter/src/: OecEvtConverter.cc
OfflineDir/: setenv.sh
OfflineDir/config/: .init.json  HOECConfig.json  HOECConfig.py  HOEC_sig.xml  LOECConfig.json  LOECVertexRec.py  LOECWaveformRec.py  LOEC_sig.xml  MiddlewareConfig.json  sig.json  tag.json  tag.xml
cmt/: project.cmt
